# finance-dashboard

./: .gitignore  app.py  config.toml  constants.py  data_fetcher.py  fetch_data.py  pyproject.toml  requirements.txt  styling.py
.streamlit/: config.toml
src/finance_dashboard/: app.py  fetch_data.py  run_app.py
src/finance_dashboard/config/: __init__.py  pages.yml  source.yml
src/finance_dashboard/services/: data_fetcher.py
src/finance_dashboard/settings/: __init__.py  settings.py
